[workspace]
resolver = "2"

members = [
    # simx基础功能增强
    "simx-enhance",
    # Http/Https 服务/客户端支持，Simx Restful支持
    "simx-http",
    # MySQL 数据库支持
    "simx-mysql",
    # MSSQL 数据库支持
    "simx-mssql",
    # Oracle 数据库支持
    "simx-oracle",
    # SSH 隧道、Socket 请求/服务支持
    "simx-tcp",
    # simx 运维支持
    "simx-ops",
    # RPA 机器人流程自动化支持
    "simx-rpa",
    # Linux 实用工具包
    "simx-linux",
    # Windows 实用工具包
    "simx-win",
    # 对docker的支持
    "simx-docker",
    # 辅助功能包
    "simx-auxiliary",
    # simx 安全测试包
    "simx-hack",
    # 引擎定时任务扩展
    "engine-cron", "simx-agent",
]

#[profile.release]
#panic = "abort"
#lto = true
#opt-level = "s"
