[package]
name = "simx-mysql"
version = "0.1.0"
edition = "2021"

[lib]
name = "simx_http"
path = "src/lib.rs"
crate-type = ["dylib", "rlib"]

[dependencies]
# 公共模块
engine-share = { path = "../../simx-engine/share" }
# 异步运行时库
tokio = { version = "1.39.2", features = ["full"] }
# 用于序列化和反序列化数据
serde = { version = "1.0.207", features = ["derive"] }
# serde 的派生宏
serde_derive = "1.0.207"
# 用于处理 JSON 数据
serde_json = "1.0.124"
serde_json5 = "0.1.0"